# zabbix-cachet

./: .gitignore  .pre-commit-config.yaml  .travis-ci.yml  Dockerfile  LICENSE  README.md  config-example.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  zabbix-api.py  zabbix-cachet.py
.github/workloads/: release.yml
debian/: changelog  control  copyright  files  rules  zabbix-cachet.install  zabbix-cachet.postinst  zabbix-cachet.service
src/zabbix_cachet/: cachet.py  excepltions.py  main.py  zabbix.py
tests/: conftest.py  test_zabbix.py
