[tool.poetry]
name = "zabbix-cachet"
version = "2.1.2"
description = "Python daemon which provides synchronisation between Zabbix IT Services and Cachet"
authors = ["Artem Alexandrov <qk4l@tem4uk.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<4.0"
requests = ">2.21.0"
pyyaml = ">=5.4"
pyzabbix = "1.3.1"
pytz = ">=2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"
pytest-env = "1.1.3"
pylint = "^3.2.1"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zabbix-cachet = 'zabbix_cachet.main:main'